fix on mobile devices

--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -121,6 +121,29 @@ span {
 
 
 @media screen and (max-width: 600px){
+    .body-heading{
+        font-size:25px;
+    }
+
+    .body-description{
+
+        font-size: 16px;
+    }
+
+    .card-title{
+
+        font-size: 20px !important;
+        line-height: 72px !important;
+
+    }
+
+
+    .card-text{
+
+        font-size: 16px !important;
+        line-height: 35px   !important;
+    }
+    
     .button-container{
 
         margin-top: 3vh;
